--- a/thad.ipynb
+++ b/thad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,8 @@
     "import random\n",
     "import fastaparser\n",
     "import os\n",
+    "\n",
+    "import pandas as pd\n",
     "\n",
     "from src.dna import *"
    ]
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +47,7 @@
        " 'ACCTATCGATCCAACCTAGG']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,128 +103,124 @@
        "dict"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = read_fasta(filename=\"data/U00096.3.fasta\")\n",
+    "f = read_fasta(filename = \"data/U00096.3.fasta\")\n",
     "\n",
     "type(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['8_CTTTAACA_U00096.3.fasta',\n",
-       " '9_CATCGGACC_U00096.3.fasta',\n",
-       " '10_TGGGGGGGCG_U00096.3.fasta',\n",
-       " '11_TCCGTGCTGTA_U00096.3.fasta',\n",
-       " '12_CGGGGCTAGTTC_U00096.3.fasta',\n",
-       " '13_CTACGCCAATGTA_U00096.3.fasta',\n",
-       " '14_GGTAACCGTATGTT_U00096.3.fasta',\n",
-       " '15_ACTCTACGCAGCGCA_U00096.3.fasta',\n",
-       " '16_CAAACTCGTTGGAACA_U00096.3.fasta',\n",
-       " '17_TGAACATTTCGGTTATA_U00096.3.fasta',\n",
-       " '18_CGCGCGAAGAACTTGGCA_U00096.3.fasta',\n",
-       " '19_TCGATGAATTACGGAAACG_U00096.3.fasta',\n",
-       " '20_ACCTATCGATCCAACCTAGG_U00096.3.fasta']"
+       "['motifs_CTTTAACA',\n",
+       " 'motifs_CATCGGACC',\n",
+       " 'motifs_TGGGGGGGCG',\n",
+       " 'motifs_TCCGTGCTGTA',\n",
+       " 'motifs_CGGGGCTAGTTC',\n",
+       " 'motifs_CTACGCCAATGTA',\n",
+       " 'motifs_GGTAACCGTATGTT',\n",
+       " 'motifs_ACTCTACGCAGCGCA',\n",
+       " 'motifs_CAAACTCGTTGGAACA',\n",
+       " 'motifs_TGAACATTTCGGTTATA',\n",
+       " 'motifs_CGCGCGAAGAACTTGGCA',\n",
+       " 'motifs_TCGATGAATTACGGAAACG',\n",
+       " 'motifs_ACCTATCGATCCAACCTAGG']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mod_files = os.listdir(\"data/modified/\")\n",
+    "mod_dirs = os.listdir(\"homer-results/\")\n",
     "\n",
-    "mod_files"
+    "mod_dirs"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random DNA Does not appear to fool it in this experiment\n",
+    "    > Limitation: degenerate codons"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8_CTTTAACA_U00096.3.fasta\n",
-      "CTTTAACA\n",
-      "9_CATCGGACC_U00096.3.fasta\n",
-      "CATCGGACC\n",
-      "10_TGGGGGGGCG_U00096.3.fasta\n",
-      "TGGGGGGGCG\n",
-      "11_TCCGTGCTGTA_U00096.3.fasta\n",
-      "TCCGTGCTGTA\n",
-      "12_CGGGGCTAGTTC_U00096.3.fasta\n",
-      "CGGGGCTAGTTC\n",
-      "13_CTACGCCAATGTA_U00096.3.fasta\n",
-      "CTACGCCAATGTA\n",
-      "14_GGTAACCGTATGTT_U00096.3.fasta\n",
-      "GGTAACCGTATGTT\n",
-      "15_ACTCTACGCAGCGCA_U00096.3.fasta\n",
-      "ACTCTACGCAGCGCA\n",
-      "16_CAAACTCGTTGGAACA_U00096.3.fasta\n",
-      "CAAACTCGTTGGAACA\n",
-      "17_TGAACATTTCGGTTATA_U00096.3.fasta\n",
-      "TGAACATTTCGGTTATA\n",
-      "18_CGCGCGAAGAACTTGGCA_U00096.3.fasta\n",
-      "CGCGCGAAGAACTTGGCA\n",
-      "19_TCGATGAATTACGGAAACG_U00096.3.fasta\n",
-      "TCGATGAATTACGGAAACG\n",
-      "20_ACCTATCGATCCAACCTAGG_U00096.3.fasta\n",
-      "ACCTATCGATCCAACCTAGG\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'CTTTAACA': False,\n",
+       " 'CATCGGACC': False,\n",
+       " 'TGGGGGGGCG': False,\n",
+       " 'TCCGTGCTGTA': False,\n",
+       " 'CGGGGCTAGTTC': False,\n",
+       " 'CTACGCCAATGTA': False,\n",
+       " 'GGTAACCGTATGTT': False,\n",
+       " 'ACTCTACGCAGCGCA': False,\n",
+       " 'CAAACTCGTTGGAACA': False,\n",
+       " 'TGAACATTTCGGTTATA': False,\n",
+       " 'CGCGCGAAGAACTTGGCA': False,\n",
+       " 'TCGATGAATTACGGAAACG': False,\n",
+       " 'ACCTATCGATCCAACCTAGG': False}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for f in mod_files:\n",
-    "    print(f)\n",
-    "    print(f.split(\"_\")[1])"
+    "results_dict = {}\n",
+    "\n",
+    "for mod_file in mod_dirs:\n",
+    "    insert_sequence = mod_file.split(\"_\")[1]\n",
+    "    outdirs = os.listdir(\"homer-results/\" + mod_file)\n",
+    "    for f in outdirs:\n",
+    "        if \"motif.2.tmp\" in f:\n",
+    "            motif_data = pd.read_csv(\"homer-results/\" + mod_file + \"/\" + f, sep = \"\\t\")\n",
+    "            motifs = motif_data[\"Consensus\"]\n",
+    "            found = False\n",
+    "            for m in motifs:\n",
+    "                if m == insert_sequence:\n",
+    "                    found = True\n",
+    "            results_dict[insert_sequence] = found\n",
+    "results_dict     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'findMotifs.pl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[52], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# example motifs\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# findMotifs.pl targets.fa fasta motifResults/ -fasta background.fa\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m mod_files:\n\u001b[0;32m----> 5\u001b[0m     subprocess\u001b[39m.\u001b[39;49mcall([\n\u001b[1;32m      6\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mfindMotifs.pl\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      7\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mdata/U00096.3.fasta\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      8\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mfasta\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      9\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mhomer-results/motifs\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m+\u001b[39;49m f\u001b[39m.\u001b[39;49msplit(\u001b[39m\"\u001b[39;49m\u001b[39m_\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39;49m],\n\u001b[1;32m     10\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39m-fasta\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m     11\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mdata/modified/\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m+\u001b[39;49m f\n\u001b[1;32m     12\u001b[0m     ])\n",
-      "File \u001b[0;32m~/anaconda3/envs/binf-proj/lib/python3.11/subprocess.py:389\u001b[0m, in \u001b[0;36mcall\u001b[0;34m(timeout, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    381\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcall\u001b[39m(\u001b[39m*\u001b[39mpopenargs, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    382\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Run command with arguments.  Wait for command to complete or\u001b[39;00m\n\u001b[1;32m    383\u001b[0m \u001b[39m    timeout, then return the returncode attribute.\u001b[39;00m\n\u001b[1;32m    384\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    387\u001b[0m \u001b[39m    retcode = call([\"ls\", \"-l\"])\u001b[39;00m\n\u001b[1;32m    388\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 389\u001b[0m     \u001b[39mwith\u001b[39;00m Popen(\u001b[39m*\u001b[39;49mpopenargs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs) \u001b[39mas\u001b[39;00m p:\n\u001b[1;32m    390\u001b[0m         \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    391\u001b[0m             \u001b[39mreturn\u001b[39;00m p\u001b[39m.\u001b[39mwait(timeout\u001b[39m=\u001b[39mtimeout)\n",
-      "File \u001b[0;32m~/anaconda3/envs/binf-proj/lib/python3.11/subprocess.py:1024\u001b[0m, in \u001b[0;36mPopen.__init__\u001b[0;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, user, group, extra_groups, encoding, errors, text, umask, pipesize, process_group)\u001b[0m\n\u001b[1;32m   1020\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtext_mode:\n\u001b[1;32m   1021\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr \u001b[39m=\u001b[39m io\u001b[39m.\u001b[39mTextIOWrapper(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr,\n\u001b[1;32m   1022\u001b[0m                     encoding\u001b[39m=\u001b[39mencoding, errors\u001b[39m=\u001b[39merrors)\n\u001b[0;32m-> 1024\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_execute_child(args, executable, preexec_fn, close_fds,\n\u001b[1;32m   1025\u001b[0m                         pass_fds, cwd, env,\n\u001b[1;32m   1026\u001b[0m                         startupinfo, creationflags, shell,\n\u001b[1;32m   1027\u001b[0m                         p2cread, p2cwrite,\n\u001b[1;32m   1028\u001b[0m                         c2pread, c2pwrite,\n\u001b[1;32m   1029\u001b[0m                         errread, errwrite,\n\u001b[1;32m   1030\u001b[0m                         restore_signals,\n\u001b[1;32m   1031\u001b[0m                         gid, gids, uid, umask,\n\u001b[1;32m   1032\u001b[0m                         start_new_session, process_group)\n\u001b[1;32m   1033\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[1;32m   1034\u001b[0m     \u001b[39m# Cleanup if the child failed starting.\u001b[39;00m\n\u001b[1;32m   1035\u001b[0m     \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m \u001b[39mfilter\u001b[39m(\u001b[39mNone\u001b[39;00m, (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstdin, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstdout, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr)):\n",
-      "File \u001b[0;32m~/anaconda3/envs/binf-proj/lib/python3.11/subprocess.py:1917\u001b[0m, in \u001b[0;36mPopen._execute_child\u001b[0;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, restore_signals, gid, gids, uid, umask, start_new_session, process_group)\u001b[0m\n\u001b[1;32m   1915\u001b[0m     \u001b[39mif\u001b[39;00m errno_num \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m   1916\u001b[0m         err_msg \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mstrerror(errno_num)\n\u001b[0;32m-> 1917\u001b[0m     \u001b[39mraise\u001b[39;00m child_exception_type(errno_num, err_msg, err_filename)\n\u001b[1;32m   1918\u001b[0m \u001b[39mraise\u001b[39;00m child_exception_type(err_msg)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'findMotifs.pl'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# example motifs\n",
     "# findMotifs.pl targets.fa fasta motifResults/ -fasta background.fa\n",
-    "for f in mod_files:\n",
+    "# for f in mod_files:\n",
     "\n",
-    "    subprocess.call([\n",
-    "        \"findMotifs.pl\",\n",
-    "        \"data/U00096.3.fasta\",\n",
-    "        \"fasta\",\n",
-    "        \"homer-results/motifs_\" + f.split(\"_\")[1],\n",
-    "        \"-fasta\",\n",
-    "        \"data/modified/\" + f\n",
-    "    ])"
+    "#     subprocess.call([\n",
+    "#         \"findMotifs.pl\",\n",
+    "#         \"data/U00096.3.fasta\",\n",
+    "#         \"fasta\",\n",
+    "#         \"homer-results/motifs_\" + f.split(\"_\")[1],\n",
+    "#         \"-fasta\",\n",
+    "#         \"data/modified/\" + f\n",
+    "#     ])"
    ]
   },
   {
