--- a/thad.ipynb
+++ b/thad.ipynb
@@ -159,6 +159,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subprocess.call(\"python thad-as-script.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [
