--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -18,7 +18,7 @@
               "'Module online'"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -32,14 +32,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "TGACGATGCGGAAGACAACAAGGAGGGACGGAGACCCGAG\n"
+            "GCGGTCTTGTATCCGACAGGAGTACTAAGTTAACTGAGCG\n"
           ]
         }
       ],
@@ -52,14 +52,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['TGAC', 'GACG', 'ACGA', 'CGAT', 'GATG', 'ATGC', 'TGCG', 'GCGG', 'CGGA', 'GGAA', 'GAAG', 'AAGA', 'AGAC', 'GACA', 'ACAA', 'CAAC', 'AACA', 'ACAA', 'CAAG', 'AAGG', 'AGGA', 'GGAG', 'GAGG', 'AGGG', 'GGGA', 'GGAC', 'GACG', 'ACGG', 'CGGA', 'GGAG', 'GAGA', 'AGAC', 'GACC', 'ACCC', 'CCCG', 'CCGA', 'CGAG']\n"
+            "['GCGG', 'CGGT', 'GGTC', 'GTCT', 'TCTT', 'CTTG', 'TTGT', 'TGTA', 'GTAT', 'TATC', 'ATCC', 'TCCG', 'CCGA', 'CGAC', 'GACA', 'ACAG', 'CAGG', 'AGGA', 'GGAG', 'GAGT', 'AGTA', 'GTAC', 'TACT', 'ACTA', 'CTAA', 'TAAG', 'AAGT', 'AGTT', 'GTTA', 'TTAA', 'TAAC', 'AACT', 'ACTG', 'CTGA', 'TGAG', 'GAGC', 'AGCG']\n"
           ]
         }
       ],
@@ -71,14 +71,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'TGAC': 1, 'GACG': 2, 'ACGA': 1, 'CGAT': 1, 'GATG': 1, 'ATGC': 1, 'TGCG': 1, 'GCGG': 1, 'CGGA': 2, 'GGAA': 1, 'GAAG': 1, 'AAGA': 1, 'AGAC': 2, 'GACA': 1, 'ACAA': 2, 'CAAC': 1, 'AACA': 1, 'CAAG': 1, 'AAGG': 1, 'AGGA': 1, 'GGAG': 2, 'GAGG': 1, 'AGGG': 1, 'GGGA': 1, 'GGAC': 1, 'ACGG': 1, 'GAGA': 1, 'GACC': 1, 'ACCC': 1, 'CCCG': 1, 'CCGA': 1, 'CGAG': 1}\n"
+            "{'GCGG': 1, 'CGGT': 1, 'GGTC': 1, 'GTCT': 1, 'TCTT': 1, 'CTTG': 1, 'TTGT': 1, 'TGTA': 1, 'GTAT': 1, 'TATC': 1, 'ATCC': 1, 'TCCG': 1, 'CCGA': 1, 'CGAC': 1, 'GACA': 1, 'ACAG': 1, 'CAGG': 1, 'AGGA': 1, 'GGAG': 1, 'GAGT': 1, 'AGTA': 1, 'GTAC': 1, 'TACT': 1, 'ACTA': 1, 'CTAA': 1, 'TAAG': 1, 'AAGT': 1, 'AGTT': 1, 'GTTA': 1, 'TTAA': 1, 'TAAC': 1, 'AACT': 1, 'ACTG': 1, 'CTGA': 1, 'TGAG': 1, 'GAGC': 1, 'AGCG': 1}\n"
           ]
         }
       ],
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -103,7 +103,7 @@
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
             "after:     GCAAGAACTATATACACACTTAGCAAGTTA(THADRYAN)\n",
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
-            "after:     GC(THADRYAN)TACACACTTAGCAAGTTACGTTTCTTAT\n"
+            "after:     GCAAGAACTATATACACACTTAGCA(THADRYAN)CTTAT\n"
           ]
         }
       ],
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -186,7 +186,7 @@
           "output_type": "stream",
           "text": [
             ">ENA|U00096|U00096.3 Escherichia coli str. K-12 substr. MG1655, complete genome.\n",
-            "GCTTTTC|<BONG_HITS_4_JESUS>|ATGTCTCTGTGTGGATTAAAAAAAGAGTGTCTGATAGCAGCTTCTGAACTGGTTACCTGCCGTGAGTAAAT\n"
+            "GCTTTTCATTCTGACTGCAACGGGCAATATGTCTCTGTGTGGATTAAAAA|<BONG_HITS_4_JESUS>|CTGAACTGGTTACCTGCCGTGAGTAAAT\n"
           ]
         }
       ],
@@ -202,6 +202,41 @@
         "\n",
         "print(name)\n",
         "print(new_seq)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "promoter: GTCCTCTTTCACCCA\n",
+            "base sequence:  TCGCGAATGTACGGCCGTCCGCTCAGAACCTTCATGGCGAGAGTAAACGTATAAACGACGCCCCGATGACAGTTTGGTCCTCTTTCACCCAAGACCGAGGCGCGCAGGGTTGGCGGGCGAAACCCGAATCTAATTTAAGTACTCGCCATCAGGGTACATATATCTCCCACACTCATAGTAGCCTGACTGAAGGCGGTTGT\n",
+            "start of promoter: 76\n",
+            "base sequence at that index: GTCCTCTTTCACCCA\n"
+          ]
+        }
+      ],
+      "source": [
+        "random.seed(8675309)\n",
+        "\n",
+        "base_sequence = random_dna(200)\n",
+        "\n",
+        "def select_random_promoter(seq, length = 15):\n",
+        "    # it can start at zer0 but can't start so that it goes off the end\n",
+        "    sample_space = [i for i in range(length, len(seq) - length)]\n",
+        "    start_location = random.choice(sample_space)\n",
+        "    return seq[start_location:start_location + length]\n",
+        "\n",
+        "promoter = select_random_promoter(base_sequence)\n",
+        "\n",
+        "print(\"promoter:\", promoter)\n",
+        "print(\"base sequence: \", base_sequence)\n",
+        "print(\"start of promoter:\", base_sequence.index(promoter))\n",
+        "print(\"base sequence at that index:\", base_sequence[76:(76+15)])"
       ]
     }
   ],
