--- a/test.ipynb
+++ b/test.ipynb
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -229,14 +229,54 @@
         "    # it can start at zer0 but can't start so that it goes off the end\n",
         "    sample_space = [i for i in range(length, len(seq) - length)]\n",
         "    start_location = random.choice(sample_space)\n",
-        "    return seq[start_location:start_location + length]\n",
+        "    return {\n",
+        "        \"promoter\": seq[start_location:start_location + length],\n",
+        "        \"promoter_start\": start_location,\n",
+        "        \"promoter_length\": 15\n",
+        "    }\n",
         "\n",
-        "promoter = select_random_promoter(base_sequence)\n",
+        "promoter_obj = select_random_promoter(base_sequence)\n",
+        "promoter = promoter_obj[\"promoter\"]\n",
+        "promoter_start = promoter_obj[\"promoter_start\"]\n",
+        "promoter_length = promoter_obj[\"promoter_length\"]\n",
         "\n",
         "print(\"promoter:\", promoter)\n",
         "print(\"base sequence: \", base_sequence)\n",
         "print(\"start of promoter:\", base_sequence.index(promoter))\n",
         "print(\"base sequence at that index:\", base_sequence[76:(76+15)])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['T', 'C', 'G', 'C', 'G', 'A', 'A', 'T', 'G', 'T', 'A', 'C', 'G', 'G', 'C', 'C', 'G', 'T', 'C', 'C', 'G', 'C', 'T', 'C', 'A', 'G', 'A', 'A', 'C', 'C', 'T', 'T', 'C', 'A', 'T', 'G', 'G', 'C', 'G', 'A', 'G', 'A', 'G', 'T', 'A', 'A', 'A', 'C', 'G', 'T', 'A', 'T', 'A', 'A', 'A', 'C', 'G', 'A', 'C', 'G', 'C', 'C', 'C', 'C', 'G', 'A', 'T', 'G', 'A', 'C', 'A', 'G', 'T', 'T', 'T', 'G']\n",
+            "[':)', 'C', 'G', 'C', 'G', 'A', 'A', 'T', 'G', 'T', 'A', 'C', 'G', 'G', 'C', 'C', 'G', 'T', 'C', 'C', 'G', 'C', 'T', 'C', 'A', 'G', 'A', 'A', 'C', 'C', 'T', 'T', 'C', 'A', 'T', 'G', 'G', 'C', 'G', 'A', 'G', 'A', 'G', 'T', 'A', 'A', 'A', 'C', 'G', 'T', 'A', 'T', 'A', 'A', 'A', 'C', 'G', 'A', 'C', 'G', 'C', 'C', 'C', 'C', 'G', 'A', 'T', 'G', 'A', 'C', 'A', 'G', 'T', 'T', 'T', 'G']\n"
+          ]
+        }
+      ],
+      "source": [
+        "def degenerate_outside_region(seq, reg_start, reg_length):\n",
+        "\n",
+        "    seq_before = seq[0:reg_start]\n",
+        "    seq_after = seq[(reg_start+reg_length):len(seq)]\n",
+        "    mutate_choice = random.choice([0,1])\n",
+        "    # randomly decide to mutate pre-promoter or post-promoter\n",
+        "    if mutate_choice == 0:\n",
+        "        seq_to_mutate = seq_before\n",
+        "    else:\n",
+        "        seq_to_mutate = seq_after\n",
+        "    seq_to_mutate_chars = [c for c in seq_to_mutate]\n",
+        "        \n",
+        "    seq_before_chars[0] = \":)\"\n",
+        "    print(seq_before_chars)\n",
+        "\n",
+        "degenerate_outside_region(base_sequence, promoter_start, promoter_length)"
       ]
     }
   ],
