--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -18,7 +18,7 @@
               "'Module online'"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -32,14 +32,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "GCGGTCTTGTATCCGACAGGAGTACTAAGTTAACTGAGCG\n"
+            "AAGACAAATACTGTGAATAACTCTAGGGCTTATGTGGAGC\n"
           ]
         }
       ],
@@ -52,14 +52,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['GCGG', 'CGGT', 'GGTC', 'GTCT', 'TCTT', 'CTTG', 'TTGT', 'TGTA', 'GTAT', 'TATC', 'ATCC', 'TCCG', 'CCGA', 'CGAC', 'GACA', 'ACAG', 'CAGG', 'AGGA', 'GGAG', 'GAGT', 'AGTA', 'GTAC', 'TACT', 'ACTA', 'CTAA', 'TAAG', 'AAGT', 'AGTT', 'GTTA', 'TTAA', 'TAAC', 'AACT', 'ACTG', 'CTGA', 'TGAG', 'GAGC', 'AGCG']\n"
+            "['AAGA', 'AGAC', 'GACA', 'ACAA', 'CAAA', 'AAAT', 'AATA', 'ATAC', 'TACT', 'ACTG', 'CTGT', 'TGTG', 'GTGA', 'TGAA', 'GAAT', 'AATA', 'ATAA', 'TAAC', 'AACT', 'ACTC', 'CTCT', 'TCTA', 'CTAG', 'TAGG', 'AGGG', 'GGGC', 'GGCT', 'GCTT', 'CTTA', 'TTAT', 'TATG', 'ATGT', 'TGTG', 'GTGG', 'TGGA', 'GGAG', 'GAGC']\n"
           ]
         }
       ],
@@ -71,14 +71,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'GCGG': 1, 'CGGT': 1, 'GGTC': 1, 'GTCT': 1, 'TCTT': 1, 'CTTG': 1, 'TTGT': 1, 'TGTA': 1, 'GTAT': 1, 'TATC': 1, 'ATCC': 1, 'TCCG': 1, 'CCGA': 1, 'CGAC': 1, 'GACA': 1, 'ACAG': 1, 'CAGG': 1, 'AGGA': 1, 'GGAG': 1, 'GAGT': 1, 'AGTA': 1, 'GTAC': 1, 'TACT': 1, 'ACTA': 1, 'CTAA': 1, 'TAAG': 1, 'AAGT': 1, 'AGTT': 1, 'GTTA': 1, 'TTAA': 1, 'TAAC': 1, 'AACT': 1, 'ACTG': 1, 'CTGA': 1, 'TGAG': 1, 'GAGC': 1, 'AGCG': 1}\n"
+            "{'AAGA': 1, 'AGAC': 1, 'GACA': 1, 'ACAA': 1, 'CAAA': 1, 'AAAT': 1, 'AATA': 2, 'ATAC': 1, 'TACT': 1, 'ACTG': 1, 'CTGT': 1, 'TGTG': 2, 'GTGA': 1, 'TGAA': 1, 'GAAT': 1, 'ATAA': 1, 'TAAC': 1, 'AACT': 1, 'ACTC': 1, 'CTCT': 1, 'TCTA': 1, 'CTAG': 1, 'TAGG': 1, 'AGGG': 1, 'GGGC': 1, 'GGCT': 1, 'GCTT': 1, 'CTTA': 1, 'TTAT': 1, 'TATG': 1, 'ATGT': 1, 'GTGG': 1, 'TGGA': 1, 'GGAG': 1, 'GAGC': 1}\n"
           ]
         }
       ],
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -103,7 +103,7 @@
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
             "after:     GCAAGAACTATATACACACTTAGCAAGTTA(THADRYAN)\n",
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
-            "after:     GCAAGAACTATATACACACTTAGCA(THADRYAN)CTTAT\n"
+            "after:     GCAA(THADRYAN)CACACTTAGCAAGTTACGTTTCTTAT\n"
           ]
         }
       ],
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -186,7 +186,7 @@
           "output_type": "stream",
           "text": [
             ">ENA|U00096|U00096.3 Escherichia coli str. K-12 substr. MG1655, complete genome.\n",
-            "GCTTTTCATTCTGACTGCAACGGGCAATATGTCTCTGTGTGGATTAAAAA|<BONG_HITS_4_JESUS>|CTGAACTGGTTACCTGCCGTGAGTAAAT\n"
+            "GCTTTTCATTCTGACTGCAACG|<BONG_HITS_4_JESUS>|TTAAAAAAAGAGTGTCTGATAGCAGCTTCTGAACTGGTTACCTGCCGTGAGTAAAT\n"
           ]
         }
       ],
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -225,15 +225,7 @@
         "\n",
         "base_sequence = random_dna(200)\n",
         "\n",
-        "def select_random_promoter(seq, length = 15):\n",
-        "    # it can start at zer0 but can't start so that it goes off the end\n",
-        "    sample_space = [i for i in range(length, len(seq) - length)]\n",
-        "    start_location = random.choice(sample_space)\n",
-        "    return {\n",
-        "        \"promoter\": seq[start_location:start_location + length],\n",
-        "        \"promoter_start\": start_location,\n",
-        "        \"promoter_length\": 15\n",
-        "    }\n",
+        "\n",
         "\n",
         "promoter_obj = select_random_promoter(base_sequence)\n",
         "promoter = promoter_obj[\"promoter\"]\n",
@@ -248,35 +240,88 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['T', 'C', 'G', 'C', 'G', 'A', 'A', 'T', 'G', 'T', 'A', 'C', 'G', 'G', 'C', 'C', 'G', 'T', 'C', 'C', 'G', 'C', 'T', 'C', 'A', 'G', 'A', 'A', 'C', 'C', 'T', 'T', 'C', 'A', 'T', 'G', 'G', 'C', 'G', 'A', 'G', 'A', 'G', 'T', 'A', 'A', 'A', 'C', 'G', 'T', 'A', 'T', 'A', 'A', 'A', 'C', 'G', 'A', 'C', 'G', 'C', 'C', 'C', 'C', 'G', 'A', 'T', 'G', 'A', 'C', 'A', 'G', 'T', 'T', 'T', 'G']\n",
-            "[':)', 'C', 'G', 'C', 'G', 'A', 'A', 'T', 'G', 'T', 'A', 'C', 'G', 'G', 'C', 'C', 'G', 'T', 'C', 'C', 'G', 'C', 'T', 'C', 'A', 'G', 'A', 'A', 'C', 'C', 'T', 'T', 'C', 'A', 'T', 'G', 'G', 'C', 'G', 'A', 'G', 'A', 'G', 'T', 'A', 'A', 'A', 'C', 'G', 'T', 'A', 'T', 'A', 'A', 'A', 'C', 'G', 'A', 'C', 'G', 'C', 'C', 'C', 'C', 'G', 'A', 'T', 'G', 'A', 'C', 'A', 'G', 'T', 'T', 'T', 'G']\n"
+            "number of differences 1\n",
+            "number of differences:  2\n"
           ]
         }
       ],
       "source": [
-        "def degenerate_outside_region(seq, reg_start, reg_length):\n",
+        "\n",
+        "degenerated_outside = degenerate_outside_region(base_sequence, promoter_start, promoter_length)\n",
+        "\n",
+        "# there should be one difference\n",
+        "count = 0\n",
+        "for i in range(len(base_sequence)):\n",
+        "    if degenerated_outside[i] != base_sequence[i]:\n",
+        "        count += 1\n",
+        "\n",
+        "print(\"number of differences\", count)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# degenerate again\n",
+        "degenerated_outside2 = degenerate_outside_region(degenerated_outside, promoter_start, promoter_length)\n",
+        "\n",
+        "# there should be one more difference\n",
+        "count = 0\n",
+        "for i in range(len(base_sequence)):\n",
+        "    if degenerated_outside2[i] != base_sequence[i]:\n",
+        "        count += 1\n",
+        "\n",
+        "print(\"number of differences: \", count)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "GTCCTCTTTCACCCA\n",
+            "GTCCTCTTGCACCCA\n"
+          ]
+        }
+      ],
+      "source": [
+        "def degenerate_inside_region(seq, reg_start, reg_length):\n",
         "\n",
         "    seq_before = seq[0:reg_start]\n",
         "    seq_after = seq[(reg_start+reg_length):len(seq)]\n",
-        "    mutate_choice = random.choice([0,1])\n",
-        "    # randomly decide to mutate pre-promoter or post-promoter\n",
-        "    if mutate_choice == 0:\n",
-        "        seq_to_mutate = seq_before\n",
-        "    else:\n",
-        "        seq_to_mutate = seq_after\n",
-        "    seq_to_mutate_chars = [c for c in seq_to_mutate]\n",
-        "        \n",
-        "    seq_before_chars[0] = \":)\"\n",
-        "    print(seq_before_chars)\n",
+        "    seq_to_mutate = seq[promoter_start:(promoter_start+promoter_length)]\n",
         "\n",
-        "degenerate_outside_region(base_sequence, promoter_start, promoter_length)"
+        "    seq_to_mutate_chars = [c for c in seq_to_mutate]\n",
+        "\n",
+        "    index_to_mutate = random.choice([i for i in range(len(seq_to_mutate_chars))])\n",
+        "\n",
+        "    nucleotide_observed = seq_to_mutate[index_to_mutate]\n",
+        "\n",
+        "    possible_mutations = [n for n in [\"A\", \"C\", \"G\", \"T\"] if n != nucleotide_observed]\n",
+        "\n",
+        "    nuc_to_insert = random.choice(possible_mutations)\n",
+        "\n",
+        "    seq_to_mutate_chars[index_to_mutate] = nuc_to_insert\n",
+        "\n",
+        "    new_promoter = \"\".join(seq_to_mutate_chars)\n",
+        "\n",
+        "    new_sequence = \"\".join([seq_before, new_promoter, seq_after])\n",
+        "\n",
+        "    return new_sequence\n",
+        "\n",
+        "degenerated_inside = degenerate_inside_region(base_sequence, promoter_start, promoter_length)\n",
+        "\n",
+        "# there should be one difference\n",
+        "print(base_sequence[promoter_start:(promoter_start+promoter_length)])\n",
+        "print(degenerated_inside[promoter_start:(promoter_start+promoter_length)])"
       ]
     }
   ],
