scripting for JP and Monica

--- a/test.ipynb
+++ b/test.ipynb
@@ -39,7 +39,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "AAGACAAATACTGTGAATAACTCTAGGGCTTATGTGGAGC\n"
+            "ATGCGCTCGGAGTCCTTGAGGTGACGATATTGGAACCAAA\n"
           ]
         }
       ],
@@ -59,7 +59,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['AAGA', 'AGAC', 'GACA', 'ACAA', 'CAAA', 'AAAT', 'AATA', 'ATAC', 'TACT', 'ACTG', 'CTGT', 'TGTG', 'GTGA', 'TGAA', 'GAAT', 'AATA', 'ATAA', 'TAAC', 'AACT', 'ACTC', 'CTCT', 'TCTA', 'CTAG', 'TAGG', 'AGGG', 'GGGC', 'GGCT', 'GCTT', 'CTTA', 'TTAT', 'TATG', 'ATGT', 'TGTG', 'GTGG', 'TGGA', 'GGAG', 'GAGC']\n"
+            "['ATGC', 'TGCG', 'GCGC', 'CGCT', 'GCTC', 'CTCG', 'TCGG', 'CGGA', 'GGAG', 'GAGT', 'AGTC', 'GTCC', 'TCCT', 'CCTT', 'CTTG', 'TTGA', 'TGAG', 'GAGG', 'AGGT', 'GGTG', 'GTGA', 'TGAC', 'GACG', 'ACGA', 'CGAT', 'GATA', 'ATAT', 'TATT', 'ATTG', 'TTGG', 'TGGA', 'GGAA', 'GAAC', 'AACC', 'ACCA', 'CCAA', 'CAAA']\n"
           ]
         }
       ],
@@ -78,7 +78,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'AAGA': 1, 'AGAC': 1, 'GACA': 1, 'ACAA': 1, 'CAAA': 1, 'AAAT': 1, 'AATA': 2, 'ATAC': 1, 'TACT': 1, 'ACTG': 1, 'CTGT': 1, 'TGTG': 2, 'GTGA': 1, 'TGAA': 1, 'GAAT': 1, 'ATAA': 1, 'TAAC': 1, 'AACT': 1, 'ACTC': 1, 'CTCT': 1, 'TCTA': 1, 'CTAG': 1, 'TAGG': 1, 'AGGG': 1, 'GGGC': 1, 'GGCT': 1, 'GCTT': 1, 'CTTA': 1, 'TTAT': 1, 'TATG': 1, 'ATGT': 1, 'GTGG': 1, 'TGGA': 1, 'GGAG': 1, 'GAGC': 1}\n"
+            "{'ATGC': 1, 'TGCG': 1, 'GCGC': 1, 'CGCT': 1, 'GCTC': 1, 'CTCG': 1, 'TCGG': 1, 'CGGA': 1, 'GGAG': 1, 'GAGT': 1, 'AGTC': 1, 'GTCC': 1, 'TCCT': 1, 'CCTT': 1, 'CTTG': 1, 'TTGA': 1, 'TGAG': 1, 'GAGG': 1, 'AGGT': 1, 'GGTG': 1, 'GTGA': 1, 'TGAC': 1, 'GACG': 1, 'ACGA': 1, 'CGAT': 1, 'GATA': 1, 'ATAT': 1, 'TATT': 1, 'ATTG': 1, 'TTGG': 1, 'TGGA': 1, 'GGAA': 1, 'GAAC': 1, 'AACC': 1, 'ACCA': 1, 'CCAA': 1, 'CAAA': 1}\n"
           ]
         }
       ],
@@ -103,7 +103,7 @@
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
             "after:     GCAAGAACTATATACACACTTAGCAAGTTA(THADRYAN)\n",
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
-            "after:     GCAA(THADRYAN)CACACTTAGCAAGTTACGTTTCTTAT\n"
+            "after:     GCAAGAACTATATACA(THADRYAN)GTTACGTTTCTTAT\n"
           ]
         }
       ],
@@ -186,7 +186,7 @@
           "output_type": "stream",
           "text": [
             ">ENA|U00096|U00096.3 Escherichia coli str. K-12 substr. MG1655, complete genome.\n",
-            "GCTTTTCATTCTGACTGCAACG|<BONG_HITS_4_JESUS>|TTAAAAAAAGAGTGTCTGATAGCAGCTTCTGAACTGGTTACCTGCCGTGAGTAAAT\n"
+            "GCTTTTCATTCTGACTGCAACGGGCAATATGTCTCT|<BONG_HITS_4_JESUS>|TCTGATAGCAGCTTCTGAACTGGTTACCTGCCGTGAGTAAAT\n"
           ]
         }
       ],
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -288,40 +288,67 @@
           "output_type": "stream",
           "text": [
             "GTCCTCTTTCACCCA\n",
-            "GTCCTCTTGCACCCA\n"
+            "GTCCTCTTTCGCCCA\n"
           ]
         }
       ],
       "source": [
-        "def degenerate_inside_region(seq, reg_start, reg_length):\n",
         "\n",
-        "    seq_before = seq[0:reg_start]\n",
-        "    seq_after = seq[(reg_start+reg_length):len(seq)]\n",
-        "    seq_to_mutate = seq[promoter_start:(promoter_start+promoter_length)]\n",
-        "\n",
-        "    seq_to_mutate_chars = [c for c in seq_to_mutate]\n",
-        "\n",
-        "    index_to_mutate = random.choice([i for i in range(len(seq_to_mutate_chars))])\n",
-        "\n",
-        "    nucleotide_observed = seq_to_mutate[index_to_mutate]\n",
-        "\n",
-        "    possible_mutations = [n for n in [\"A\", \"C\", \"G\", \"T\"] if n != nucleotide_observed]\n",
-        "\n",
-        "    nuc_to_insert = random.choice(possible_mutations)\n",
-        "\n",
-        "    seq_to_mutate_chars[index_to_mutate] = nuc_to_insert\n",
-        "\n",
-        "    new_promoter = \"\".join(seq_to_mutate_chars)\n",
-        "\n",
-        "    new_sequence = \"\".join([seq_before, new_promoter, seq_after])\n",
-        "\n",
-        "    return new_sequence\n",
         "\n",
         "degenerated_inside = degenerate_inside_region(base_sequence, promoter_start, promoter_length)\n",
         "\n",
         "# there should be one difference\n",
         "print(base_sequence[promoter_start:(promoter_start+promoter_length)])\n",
         "print(degenerated_inside[promoter_start:(promoter_start+promoter_length)])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "sequence to start: GGTAGTCCAGGGACACCGTAGCACCCCTCCCCTAACACCCTAGTACCGCCCTTCCTGCCAAATGGCGGCGCAGGAGGTCAAACACCGAACCGCCGGGGTT\n",
+            "promoter: AGTACCGCCCTTCCT\n",
+            "sequence after: GGTAGTCCACAGACAGGGTAGCACCCGTCCCCTAACACATTATGTTTGAGGACCTTGTCAAATGCCGGTACAGGAGTTTAAACTCCGAACCGCCGGGGTT\n",
+            "25\n"
+          ]
+        }
+      ],
+      "source": [
+        "base_seq_test_orig = random_dna(100)\n",
+        "base_seq_test = base_seq_test_orig\n",
+        "\n",
+        "promoter_obj = select_random_promoter(base_seq_test)\n",
+        "\n",
+        "promoter = promoter_obj[\"promoter\"]\n",
+        "promoter_start = promoter_obj[\"promoter_start\"]\n",
+        "promoter_length = promoter_obj[\"promoter_length\"]\n",
+        "\n",
+        "print(\"sequence to start:\", base_seq_test)\n",
+        "print(\"promoter:\", promoter)\n",
+        "\n",
+        "for i in range(15):\n",
+        "    base_seq_test = degenerate_outside_region(base_seq_test,\n",
+        "                                              promoter_start, \n",
+        "                                              promoter_length)\n",
+        "    for j in range(5):\n",
+        "        base_seq_test = degenerate_inside_region(base_seq_test,\n",
+        "                                                 promoter_start,\n",
+        "                                                 promoter_length)\n",
+        "print(\"sequence after:\", base_seq_test)\n",
+        "\n",
+        "count = 0\n",
+        "for k in range(len(base_seq_test)):\n",
+        "    if base_seq_test_orig[k] != base_seq_test[k]:\n",
+        "        count += 1\n",
+        "\n",
+        "# I think this is right because it could get moved in at i==3 back\n",
+        "# to where it was at i == 1\n",
+        "print(count)\n"
       ]
     }
   ],
